--- a/lists/ROA/meta.yaml
+++ b/lists/ROA/meta.yaml
@@ -1,4 +1,4 @@
 id: ROA
-url: www.itu.int/ITU-T/inr/roa/index.html
+url: https://www.itu.int/ITU-T/inr/roa/index.html
 title:
   en: List of recognized operating agencies (ROAs)
