--- a/issues/1275/general.yaml
+++ b/issues/1275/general.yaml
@@ -1,1 +1,255 @@
-messages: []
+messages:
+  - extra_links:
+      - M1400_ICC
+      - BUREAUFAX
+      - ROA
+    type: running_annexes
+  - type: approved_recommendations
+    items:
+      'L.1023 ': 2023-07-31T22:00:00.000Z
+      'L.1027 ': 2023-07-31T22:00:00.000Z
+      'L.1326 ': 2023-07-31T22:00:00.000Z
+      L.1471: 2023-07-31T22:00:00.000Z
+    by: AAP-34
+    procedures: Recommendation ITU-T A.8
+  - type: ipns
+    contents:
+      en:
+        type: doc
+        content:
+          - type: paragraph
+            content:
+              - type: text
+                marks:
+                  - type: strong
+                text: Note from TSB
+          - type: paragraph
+            content:
+              - type: text
+                marks:
+                  - type: em
+                text: Identification codes for International Mobile Networks
+          - type: paragraph
+            content:
+              - type: text
+                text: >-
+                  Associated with shared mobile country code 901 (MCC), the
+                  following two-digit mobile network codes (MNC) have been 
+              - type: text
+                marks:
+                  - type: strong
+                text: assigned
+              - type: text
+                text: .
+          - type: paragraph
+            content:
+              - type: text
+                text: "\_"
+          - type: table
+            content:
+              - type: table_row
+                content:
+                  - type: table_cell
+                    attrs:
+                      colspan: 1
+                      rowspan: 1
+                      colwidth: null
+                    content:
+                      - type: paragraph
+                        content:
+                          - type: text
+                            text: Network
+                  - type: table_cell
+                    attrs:
+                      colspan: 1
+                      rowspan: 1
+                      colwidth: null
+                    content:
+                      - type: paragraph
+                        content:
+                          - type: text
+                            text: 'Mobile Country Code (MCC) and '
+                          - type: hard_break
+                          - type: text
+                            text: Mobile Network Code (MNC)
+                  - type: table_cell
+                    attrs:
+                      colspan: 1
+                      rowspan: 1
+                      colwidth: null
+                    content:
+                      - type: paragraph
+                        content:
+                          - type: text
+                            text: Date of assignment
+              - type: table_row
+                content:
+                  - type: table_cell
+                    attrs:
+                      colspan: 1
+                      rowspan: 1
+                      colwidth: null
+                    content:
+                      - type: paragraph
+                        content:
+                          - type: text
+                            text: GlobalmatiX AG
+                  - type: table_cell
+                    attrs:
+                      colspan: 1
+                      rowspan: 1
+                      colwidth: null
+                    content:
+                      - type: paragraph
+                        content:
+                          - type: text
+                            text: 901 02
+                  - type: table_cell
+                    attrs:
+                      colspan: 1
+                      rowspan: 1
+                      colwidth: null
+                    content:
+                      - type: paragraph
+                        content:
+                          - type: text
+                            text: 10.VIII.2023
+          - type: paragraph
+  - contents:
+      - country_name:
+          en: 'Iridium Satellite LLC '
+        phone_code: +881 6 and +881 7
+        contact:
+          en: "Mr Angel Garcia\nTelecommunications Solution Engineer\nIridium Satellite LLC\n8440 South River Parkway \nTEMPE, AZ  85284 \nUnited States\nTel:\t+1 480 752 5139\nE-mail:\tangel.garcia@iridium.com\nURL:\twww.iridium.com"
+        communications:
+          - date: 2023-08-15T21:25:21.956Z
+            contents:
+              en:
+                type: doc
+                content:
+                  - type: paragraph
+                    content:
+                      - type: text
+                        marks:
+                          - type: em
+                        text: Iridium Satellite LLC
+                      - type: text
+                        text: ' announces the following information about the Iridium numbering plan and dialling procedure:'
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: A 13
+                      - type: text
+                        marks:
+                          - type: superscript
+                        text: th
+                      - type: text
+                        text: ' digit has been added to the dialling procedures for numbers in range +8816-xxx-xxxxx to support expanded Iridium services and subscriber growth. Iridium’s MSISDNs are now either 12 digits or 13 digits long. These calls should therefore be considered valid.'
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: >-
+                          Service providers are kindly requested to program
+                          their switches to enable access to these numbering
+                          ranges.
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: "\_"
+                  - type: paragraph
+                    content:
+                      - type: text
+                        marks:
+                          - type: em
+                        text: Iridium Satellite LLC
+                      - type: text
+                        text: ' has interconnection agreements with the following carriers listed below. At the present time, these are the only valid directly interconnected IXC carriers for terminating or originating traffic with the Iridium Network. Their local representative should be contacted for pricing and routing information:'
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: "AT&T (U.S.):\_\_\_\_\_\_ \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ www.att.com/worldwide/"
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: "Sinch (U.S.):\_\_\_\_\_\_\_ \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ https://www.sinch.com/products/voice/voice-services/"
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: "Telstra International (AUS):\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ https://www.telstra.com.au/business-enterprise"
+                  - type: paragraph
+                    content:
+                      - type: text
+                        marks:
+                          - type: em
+                        text: Iridium Satellite LLC
+                      - type: text
+                        text: " requests that access be ensured to the Iridium network using country codes +881\_6 and +881\_7, and has set up a recorded announcement in its switch that will enable customers to validate their routing."
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: "To access this service, please dial:\_\_ +881 6 311 10006 and"
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: "\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \_+881 7 311 10007"
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: 'Calls placed to these numbers will terminate at '
+                      - type: text
+                        marks:
+                          - type: em
+                        text: Iridium Satellite LLC
+                      - type: text
+                        text: ' switch with the following recorded announcement: “You have reached the Iridium Satellite Tempe Gateway, your access to the Iridium global network. Welcome.”'
+                  - type: paragraph
+                    content:
+                      - type: text
+                        text: >-
+                          The contact person below would appreciate an e-mail
+                          message or fax from you with the contact information
+                          for both the person responsible for your main
+                          translations and the main technical point of contact
+                          for your company. This will allow 
+                      - type: text
+                        marks:
+                          - type: em
+                        text: Iridium Satellite LLC
+                      - type: text
+                        text: ' to work together with customers to solve any routing problems and other issues that might arise.'
+    type: telephone_service_2
+  - type: service_restrictions
+    items:
+      - country:
+          en: Seychelles
+        ob: 1006
+        page: 13
+      - country:
+          en: Slovakia
+        ob: 1007
+        page: 12
+      - country:
+          en: Malaysia
+        ob: 1013
+        page: 5
+      - country:
+          en: Thailand
+        ob: 1034
+        page: 5
+      - country:
+          en: São Tomé and Principe
+        ob: 1039
+        page: 14
+      - country:
+          en: Uruguay
+        ob: 1039
+        page: 14
+      - country:
+          en: 'Hong Kong, China'
+        ob: 1068
+        page: 4
+      - country:
+          en: Ukraine
+        ob: 1148
+        page: 5
+  - type: callback_procedures
